--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ bevy-inspector-egui = "0.18"
 bevy_math = "0.10.1"
 plotters = "0.3.4"
 bevy_mod_debugdump = "0.7"
+console_error_panic_hook = "0.1"
